nav bar links fixed

--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <nav style="float:right;">
-        <a style="margin-right: 20px;" href="http://127.0.0.1:5500/Web/Html%20Project/Home.html">Home</a>
-        <a style="margin-right: 20px;" href="http://127.0.0.1:5500/Web/Html%20Project/About.html">About</a>
-        <a style="margin-right: 20px;" href="http://127.0.0.1:5500/Web/Html%20Project/Work.html">Work</a>
-        <a style="margin-right: 20px;" href="http://127.0.0.1:5500/Web/Html%20Project/resume.html">resume</a>
-        <a style="margin-right: 20px;" href="http://127.0.0.1:5500/Web/Html%20Project/Contract.html">Contact</a>
+        <a style="margin-right: 20px;" href="/Web/Html Project/Home.html">Home</a>
+            <a style="margin-right: 20px;" href="/Web/Html Project/About.html">About</a>
+            <a style="margin-right: 20px;" href="/Web/Html Project/Work.html">Work</a>
+            <a style="margin-right: 20px;" href="/Web/Html Project/resume.html">resume</a>
+            <a style="margin-right: 20px;" href="/Web/Html Project/Contract.html">Contact</a>
     </nav>
     <h1>Resume</h1>
 </body>
