Adding the  styling sheet

--- a/About.html
+++ b/About.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,700;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="HomeStyle.css">
     <title>About</title>
 </head>
 <body>
-    <nav style="float:right;">
-        <a style="margin-right: 20px;" href="/Web/Html Project/Home.html">Home</a>
-            <a style="margin-right: 20px;" href="/Web/Html Project/About.html">About</a>
-            <a style="margin-right: 20px;" href="/Web/Html Project/Work.html">Work</a>
-            <a style="margin-right: 20px;" href="/Web/Html Project/resume.html">resume</a>
-            <a style="margin-right: 20px;" href="/Web/Html Project/Contract.html">Contact</a>
-    </nav>
-    <h1>About</h1>
-    <p style="padding-top:100px;">
+    <header>
+        <h2>Portfolio</h2>
+        <nav class="navLinks">
+            <li><a style="margin-right: 20px;" href="/Web/Html Project/Home.html">Home</a></li> 
+            <li><a style="margin-right: 20px;" href="/Web/Html Project/About.html">About</a></li> 
+            <li><a style="margin-right: 20px;" href="/Web/Html Project/Work.html">Work</a></li> 
+            <li><a style="margin-right: 20px;" href="/Web/Html Project/resume.html">resume</a></li> 
+            <li><a style="margin-right: 20px;" href="/Web/Html Project/Contract.html">Contact</a></li> 
+        </nav>
+    </header>
+    <p class="paragraph" style="padding-top:100px;">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum fermentum quam nec ultricies.
         Nulla facilisi. Quisque nec lacus arcu. Proin id egestas risus. Nulla bibendum magna eleifend, lacinia ligula ut, dictum arcu.
         Vivamus fringilla sit amet erat ut sodales.<br>
